[project]
name = "streampot"
version = "0.3.1"
description = "API client for StreamPot.io"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jack Bridger"},
    {name = "Ostap Brehin"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "requests >= 2.25"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/StreamPot/python-sdk"
Changelog = "https://github.com/StreamPot/python-sdk/releases"
Issues = "https://github.com/StreamPot/python-sdk/issues"
CI = "https://github.com/StreamPot/python-sdk/actions"


[project.optional-dependencies]
test = [
    "pytest",
    "requests-mock"
]
